# beepy-app-template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  bapp-details.json  justfile  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: publish.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: main.py
{{cookiecutter.project_slug}}/tests/: test_main.py
