[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
homepage = "{{ cookiecutter.homepage }}"

[tool.poetry.dependencies]
textual = "^0.82.0"
python = "^3.9"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "src.{{ cookiecutter.project_slug }}.main:main"
